@@ -1,5 +1,11 @@
 2004-04-03  Jorn Baayen  <jbaayen@gnome.org>
 
+	* src/Makefile.am:
+
+	Please distcheck.
+
+2004-04-03  Jorn Baayen  <jbaayen@gnome.org>
+
 	* NEWS:
 
 	Updated for upcoming 0.5.1 release.
